<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item1"
        android:title="Chat"
        app:showAsAction="never"/>

    <item android:id="@+id/item2"
        android:title="add Contact"
        app:showAsAction="never"/>

</menu>