<resources>
    <string name="app_name">Chat WiFi-Direct</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="chat_home">Chats</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_switch">Search</string>
    <string name="name">Name:</string>
    <string name="mac">MAC-Adress:</string>
    <string name="save">Save</string>
</resources>
