<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/contactPictureView1ID"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:srcCompat="@tools:sample/avatars[8]" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contactNameViewID"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="Name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/macAdressViewID"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="MAC-Adress"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>
</LinearLayout>