...
        android:layout_height="122dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_avatar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="184dp"
        android:layout_height="64dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="181dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="ContactName"
        android:textSize="18sp"
...
